@@ -46,12 +46,12 @@ sanity::dump_buffer()
     {
       ofstream out(filename.c_str());
       if (out)
-	{
-	  copy(logbuf.begin(), logbuf.end(), ostream_iterator<char>(out));
-	  ui.inform(string("wrote debugging log to ") + filename + "\n");
-	}
+        {
+          copy(logbuf.begin(), logbuf.end(), ostream_iterator<char>(out));
+          ui.inform(string("wrote debugging log to ") + filename + "\n");
+        }
       else
-	ui.inform("failed to write debugging log to " + filename + "\n");
+        ui.inform("failed to write debugging log to " + filename + "\n");
     }
   else
     ui.inform(string("discarding debug log\n"));
@@ -89,7 +89,7 @@ sanity::set_relaxed(bool rel)
 
 void 
 sanity::log(format const & fmt, 
-	    char const * file, int line)
+            char const * file, int line)
 {
   string str;
   try 
@@ -99,9 +99,9 @@ sanity::log(format const & fmt,
   catch (std::exception & e)
     {
       ui.inform("fatal: formatter failed on " 
-		+ string(file) 
-		+ ":" + boost::lexical_cast<string>(line) 
-		+ ": " + e.what());
+                + string(file) 
+                + ":" + boost::lexical_cast<string>(line) 
+                + ": " + e.what());
       throw e;
     }
   
@@ -109,7 +109,7 @@ sanity::log(format const & fmt,
     {
       str.resize(constants::log_line_sz);
       if (str.at(str.size() - 1) != '\n')
-	str.at(str.size() - 1) = '\n';
+        str.at(str.size() - 1) = '\n';
     }
   copy(str.begin(), str.end(), back_inserter(logbuf));
   if (debug)
@@ -118,7 +118,7 @@ sanity::log(format const & fmt,
 
 void 
 sanity::progress(format const & fmt, 
-		 char const * file, int line)
+                 char const * file, int line)
 {
   string str;
   try 
@@ -128,16 +128,16 @@ sanity::progress(format const & fmt,
   catch (std::exception & e)
     {
       ui.inform("fatal: formatter failed on " 
-		+ string(file) 
-		+ ":" + boost::lexical_cast<string>(line) 
-		+ ": " + e.what());
+                + string(file) 
+                + ":" + boost::lexical_cast<string>(line) 
+                + ": " + e.what());
       throw e;
     }
   if (str.size() > constants::log_line_sz)
     {
       str.resize(constants::log_line_sz);
       if (str.at(str.size() - 1) != '\n')
-	str.at(str.size() - 1) = '\n';
+        str.at(str.size() - 1) = '\n';
     }
   copy(str.begin(), str.end(), back_inserter(logbuf));
   if (! quiet)
@@ -146,7 +146,7 @@ sanity::progress(format const & fmt,
 
 void 
 sanity::warning(format const & fmt, 
-		char const * file, int line)
+                char const * file, int line)
 {
   string str;
   try 
@@ -156,16 +156,16 @@ sanity::warning(format const & fmt,
   catch (std::exception & e)
     {
       ui.inform("fatal: formatter failed on " 
-		+ string(file) 
-		+ ":" + boost::lexical_cast<string>(line) 
-		+ ": " + e.what());
+                + string(file) 
+                + ":" + boost::lexical_cast<string>(line) 
+                + ": " + e.what());
       throw e;
     }
   if (str.size() > constants::log_line_sz)
     {
       str.resize(constants::log_line_sz);
       if (str.at(str.size() - 1) != '\n')
-	str.at(str.size() - 1) = '\n';
+        str.at(str.size() - 1) = '\n';
     }
   string str2 = "warning: " + str;
   copy(str2.begin(), str2.end(), back_inserter(logbuf));
@@ -175,7 +175,7 @@ sanity::warning(format const & fmt,
 
 void 
 sanity::naughty_failure(string const & expr, format const & explain, 
-			string const & file, int line)
+                        string const & file, int line)
 {
   log(format("%s:%d: usage constraint '%s' violated\n") % file % line % expr,
       file.c_str(), line);
@@ -184,7 +184,7 @@ sanity::naughty_failure(string const & expr, format const & explain,
 
 void 
 sanity::invariant_failure(string const & expr, 
-			  string const & file, int line)
+                          string const & file, int line)
 {
   format fmt = 
     format("%s:%d: invariant '%s' violated\n") 
@@ -195,10 +195,10 @@ sanity::invariant_failure(string const & expr,
 
 void 
 sanity::index_failure(string const & vec_expr, 
-		      string const & idx_expr, 
-		      unsigned long sz,
-		      unsigned long idx,
-		      string const & file, int line)
+                      string const & idx_expr, 
+                      unsigned long sz,
+                      unsigned long idx,
+                      string const & file, int line)
 {
   format fmt = 
     format("%s:%d: index '%s' = %d overflowed vector '%s' with size %d\n")
